# MDSuite

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Einstein_Helfand.py  File_Processing.py  Functions.py  LAMMPS_Analysis.py  MANIFEST.in  README.md  README.md.bak  README.rst  Test.py  Unwrap.py  dev-requirements.txt  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_unwrap.py  tst.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
CI/: test_mdsuite.py
MDSuite.egg-info/: PKG-INFO  SOURCES.txt
Project_Directories/: data.md
docs/: CNAME  Makefile  _config.yml  contents.html  index.html  index.md  index.md.bak  searchindex.js  stuff.txt  ts.html
examples/: Adding_Data.ipynb  LiF_sample.xyz  MDSuite_Binary_Salt_Walkthrough.ipynb  MDSuite_Demonstration.html  MDSuite_Demonstration.ipynb  Tutorial_1.ipynb  Tutorial_2.ipynb  Untitled.ipynb  log.lammps  trajectory_files.tar.xz.REMOVED.git-id  uwrap_test.extxyz  walkthrough.py
mdsuite/: Classes.py  Constants.py  Meta_Functions.py  Methods.py  Project.py  Routines.py  UI.py  __init__.py  __main__.py  _version.py  conductivity_thermal.py  experiment.py  meta_functions.py  methods.py  project.py
package_tests/: README.md
source/: conf.py
src/: Classes.py  Constants.py  Main.py  Meta_Functions.py  Methods.py  UI.py  Untitled.ipynb  __init__.py  out.txt  run.sh  test.py
test/: run.py
tests/: .hdf_test.py.swp  .unwrap_test.extxyz.swp  Meta_Functions.py  README.md  Tutorial_Example.ipynb  Untitled.ipynb  (+5 more)
(+615 files in other folders)
