[tool.poetry]
name = "mdsuite"
version = "0.1.0"
description = "A postprocessing tool for molecular dynamics simulations."
authors = ["zincwarecode <zincwarecode@gmail.com>"]
license = "EPL-2.0"
include = ["mdsuite/data/*.json"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.5"
h5py = "^3.7.0"
pysmiles = "^1.0.1"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
tqdm = "^4.64.0"
psutil = "^5.6.6"
numpy = "^1.23.0"
GPUtil = "^1.4.0"
PubChemPy = "^1.0.4"
PyYAML = "^5.4"
scooby = "^0.5.12"
SQLAlchemy = "^1.4"
pandas = "^1.0"
tensorflow-probability = "^0.17.0"
colorutils = "^0.3.0"
bokeh = "^2.4.3"
chemfiles = "^0.10.2"
dot4dict = "^0.1.1"
open3d = "0.15.1"

[tool.poetry.dev-dependencies]
sphinxcontrib-bibtex = "^2.4.2"
pybtex = "^0.24.0"
pytest = "^7.1.2"
nbsphinx = "^0.8.9"
Sphinx = "4.3.0"
sphinx-rtd-theme = "^1.0.0"
numpydoc = "^1.4.0"
sphinx-copybutton = "^0.5.0"
jupyterlab = "^3.4.3"
pandoc = "^2.2"
nbsphinx-link = "^1.3.0"
isort = "^5.10.1"
coverage = "^6.4.1"
coveralls = "^3.3.1"
MDAnalysis = "^2.2.0"
black = "^22.6.0"
ZnVis = "^0.0.1"
ase = "^3.22.1"
zinchub = {git = "https://github.com/zincware/ZincHub.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = 'black'
multi_line_output = 3
